--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel=stylesheet>
     <link rel=icon href=../dist/favicon.ico>
     <title>Base de Conhecimento</title>
-    <link href=../dist/css/app.7e087e43.css rel=preload as=style>
-    <link href=../dist/css/app.7e087e43.css rel=stylesheet>
-    <link href=../dist/css/chunk-vendors.62d9d235.css rel=preload as=style>
-    <link href=../dist/css/chunk-vendors.62d9d235.css rel=stylesheet>
-    <link href=../dist/js/app.f03c8d7d.js rel=preload as=script>
-    <link href=../dist/js/chunk-vendors.f4bfad82.js rel=preload as=script>
+    <link href=/css/app.7e087e43.css rel=preload as=style>
+    <link href=/css/app.7e087e43.css rel=stylesheet>
+    <link href=/css/chunk-vendors.62d9d235.css rel=preload as=style>
+    <link href=/css/chunk-vendors.62d9d235.css rel=stylesheet>
+    <link href=/js/app.f03c8d7d.js rel=preload as=script>
+    <link href=/js/chunk-vendors.f4bfad82.js rel=preload as=script>
 </head>
 
 <body><noscript><strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong></noscript>
     <div id=app></div>
-    <script src=../dist/js/chunk-vendors.f4bfad82.js></script>
-    <script src=../dist/js/app.f03c8d7d.js></script>
+    <script src=/js/chunk-vendors.f4bfad82.js></script>
+    <script src=/js/app.f03c8d7d.js></script>
 </body>
 
 </html>
